<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="app_name">Bullet Block</string>

    <string name="continue_game">Continue</string>

    <string name="exit">Exit</string>
    <string name="game_over_hint">Take a rest and challenge again</string>

    <string name="heart">Heart</string>
    <string name="help">Help</string>

    <string name="level">Level</string>

    <string name="menu">Menu</string>

    <string name="new_game">New</string>
    <string name="notice">Notice</string>

    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="on">On</string>

    <string name="pause">Pause</string>

    <string name="ranking">Ranking</string>
    <string name="reset">Reset</string>
    <string name="resume">Resume</string>

    <string name="score">Score</string>
    <string name="setting">Setting</string>
    <string name="sound">Sound</string>
    <string name="square">Square</string>
    <string name="start">Start</string>
    <string name="style">Style</string>
</resources>
