<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <game.tetris.game.DancerView
            android:id="@+id/spriteView"
            android:layout_width="@dimen/dancer_width"
            android:layout_height="@dimen/dancer_height" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <game.tetris.widget.ForecasterView
                android:id="@+id/forecaster"
                android:layout_width="@dimen/forecaster_size"
                android:layout_height="@dimen/forecaster_size"
                android:layout_marginTop="@dimen/menu_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_margin"
                android:text="@string/level"
                android:textColor="@color/c_label" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_margin"
                android:text="@string/score"
                android:textColor="@color/c_label" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_value" />

            <ImageView
                android:id="@+id/iv_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reward" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_margin"
                android:text="@string/ranking"
                android:textColor="@color/c_label" />

            <TextView
                android:id="@+id/tv_ranking_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_value" />

            <TextView
                android:id="@+id/tv_ranking_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_value" />

            <TextView
                android:id="@+id/tv_ranking_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/c_value" />

            <ImageView
                android:id="@+id/iv_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/menu_margin"
                android:src="@drawable/ic_audio" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/reset"
            style="@style/btn_setting"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/music"
            style="@style/btn_setting"
            android:text="@string/sound" />

        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/start"
                style="@style/btn_setting"
                android:text="@string/start"
                android:visibility="gone" />

            <TextView
                android:id="@+id/pause"
                style="@style/btn_setting"
                android:text="@string/pause"
                android:visibility="gone" />

            <TextView
                android:id="@+id/resume"
                style="@style/btn_setting"
                android:text="@string/resume"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/left"
            style="@style/btn_direction.left"
            android:src="@drawable/ic_left" />

        <ImageView
            android:id="@+id/right"
            style="@style/btn_direction.right"
            android:src="@drawable/ic_right" />

        <ImageView
            android:id="@+id/transform"
            style="@style/btn_transform"
            android:src="@drawable/ic_change" />

    </LinearLayout>

    <ImageView
        android:id="@+id/down"
        style="@style/btn_direction.bottom"
        android:src="@drawable/ic_down" />
</LinearLayout>